fixes profile overflow and scroll bar

--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -1,178 +1,198 @@
-@import "_variables";
-.profile__main {
-    margin: 5px;
-    margin-top: 50px;
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.25);
-}
-
-.profile__info {
-    padding: 40px;
-    padding-bottom: 0px;
-}
-
-.profile__picture {
-    width: 100%;
-    max-width: 410px;
-    margin: 0 auto;
-}
-
-.profile__socialmedia {
-    display: flex;
-    flex-wrap: wrap;
-    & img {
-        padding-right: 20px;
-    }
-    & div {
+    @import "_variables";
+    .profile__main {
+        margin: 5px;
+        margin-top: 50px;
         display: flex;
-        margin-right: 50px;
-        margin-top: 40px;
+        background-color: rgba(255, 255, 255, 0.25);
     }
-    & div:nth-child(3) {
-        margin-bottom: 30px;
+    
+    .profile__info {
+        padding: 40px;
+        padding-bottom: 0px;
     }
-    & span {
+    
+    .profile__picture {
+        width: 100%;
+        max-width: 410px;
+        margin: 0 auto;
+    }
+    
+    .profile__socialmedia {
+        display: flex;
+        flex-wrap: wrap;
+        & img {
+            padding-right: 20px;
+        }
+        & div {
+            display: flex;
+            margin-right: 50px;
+            margin-top: 40px;
+        }
+        & div:nth-child(3) {
+            margin-bottom: 30px;
+        }
+        & span {
+            font-family: $fontFamily;
+            font-weight: 700;
+            color: $white;
+            font-size: 30px;
+            line-height: 35px;
+        }
+    }
+    
+    .subscribers {
+        font-family: $fontFamily;
+        font-weight: 500 !important;
+        color: $white;
+        font-size: 16px !important;
+    }
+    
+    .profile__title a {
+        font-family: $fontFamily;
+        font-weight: 800;
+        color: $white;
+        font-size: 50px;
+        text-decoration: none;
+    }
+    
+    .profile__info-title {
         font-family: $fontFamily;
         font-weight: 700;
         color: $white;
         font-size: 30px;
-        line-height: 35px;
     }
-}
-
-.subscribers {
-    font-family: $fontFamily;
-    font-weight: 500 !important;
-    color: $white;
-    font-size: 16px !important;
-}
-
-.profile__title a {
-    font-family: $fontFamily;
-    font-weight: 800;
-    color: $white;
-    font-size: 50px;
-    text-decoration: none;
-}
-
-.profile__info-title {
-    font-family: $fontFamily;
-    font-weight: 700;
-    color: $white;
-    font-size: 30px;
-}
-
-.profile__info-text {
-    padding: 20px 0;
-    font-family: $fontFamily;
-    font-weight: 300;
-    color: $white;
-    font-size: 16px;
-}
-
-.profile__main-lastcontent {
-    margin-top: 80px;
-    margin-bottom: 50px;
-    text-align: center;
-    font-family: $fontFamily;
-    font-weight: 800;
-    color: $white;
-    font-size: 50px;
-}
-
-.profile__main-videos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.profile__main-videos-item {
-    width: 421px;
-    height: 217px;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    position: relative;
-}
-
-.profile__video-frame {
-    opacity: 0.8;
-}
-
-.profile__video-playbtn {
-    position: absolute;
-    top: 43%;
-    left: 47%;
-}
-
-.profile__main-slidertitle {
-    margin-top: 80px;
-    margin-bottom: 50px;
-    text-align: center;
-    font-family: $fontFamily;
-    font-weight: 800;
-    color: $white;
-    font-size: 50px;
-}
-
-.splide__slide {
-    display: flex;
-}
-
-.splide__arrow {
-    top: 95%;
-    background: none;
-}
-
-.splide__arrow--prev {
-    z-index: 2;
-    left: 40%
-}
-
-.splide__arrow--next {
-    z-index: 2;
-    left: 57%
-}
-
-@media screen and (max-width: 1280px) {
-    .profile__main {
-        display: block;
+    
+    .profile__info-text {
+        padding: 20px 0;
+        height: 100px;
+        font-family: $fontFamily;
+        font-weight: 300;
+        color: $white;
+        font-size: 16px;
+        overflow-y: scroll;
     }
-}
-
-@media screen and (max-width: 648px) {
-    .splide__arrow--prev {
-        left: 22%
+    
+     ::-webkit-scrollbar {
+        width: 5px;
     }
-    .splide__arrow--next {
-        left: 68%
+    
+     ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px $white;
+        border-radius: 10px;
     }
-}
-
-@media screen and (max-width: 414px) {
+    
+     ::-webkit-scrollbar-thumb {
+        background: $white;
+        border-radius: 10px;
+    }
+    
+     ::-webkit-scrollbar-thumb:hover {
+        background: $white;
+    }
+    
+    .profile__main-lastcontent {
+        margin-top: 80px;
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: $fontFamily;
+        font-weight: 800;
+        color: $white;
+        font-size: 50px;
+    }
+    
+    .profile__main-videos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    
     .profile__main-videos-item {
-        width: 300px;
+        width: 421px;
+        height: 217px;
         margin: 0 auto;
+        margin-bottom: 30px;
+        position: relative;
     }
+    
     .profile__video-frame {
-        width: 300px;
-        height: 161px;
-        margin: 0 auto;
+        opacity: 0.8;
     }
+    
     .profile__video-playbtn {
-        top: 26%;
-        left: 45%;
+        position: absolute;
+        top: 43%;
+        left: 47%;
     }
-    .profile__picture img {
-        width: 100%;
-        max-width: 300px;
-        margin: 0 auto;
+    
+    .profile__main-slidertitle {
+        margin-top: 80px;
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: $fontFamily;
+        font-weight: 800;
+        color: $white;
+        font-size: 50px;
     }
-    .profile__picture {
-        padding-top: 15px;
-        max-width: 300px;
-        margin: 0 auto;
+    
+    .splide__slide {
+        display: flex;
     }
-    .profile__title a {
-        font-size: 35px;
+    
+    .splide__arrow {
+        top: 95%;
+        background: none;
     }
-}
+    
+    .splide__arrow--prev {
+        z-index: 2;
+        left: 40%
+    }
+    
+    .splide__arrow--next {
+        z-index: 2;
+        left: 57%
+    }
+    
+    @media screen and (max-width: 1280px) {
+        .profile__main {
+            display: block;
+        }
+    }
+    
+    @media screen and (max-width: 648px) {
+        .splide__arrow--prev {
+            left: 22%
+        }
+        .splide__arrow--next {
+            left: 68%
+        }
+    }
+    
+    @media screen and (max-width: 414px) {
+        .profile__main-videos-item {
+            width: 300px;
+            margin: 0 auto;
+        }
+        .profile__video-frame {
+            width: 300px;
+            height: 161px;
+            margin: 0 auto;
+        }
+        .profile__video-playbtn {
+            top: 26%;
+            left: 45%;
+        }
+        .profile__picture img {
+            width: 100%;
+            max-width: 300px;
+            margin: 0 auto;
+        }
+        .profile__picture {
+            padding-top: 15px;
+            max-width: 300px;
+            margin: 0 auto;
+        }
+        .profile__title a {
+            font-size: 35px;
+        }
+    }
